# oneup

./: .gitignore  CHANGELOG.md  CLAUDE.md  Justfile  Makefile  README.md  flake.nix  pubspec.yaml
android/app/src/main/kotlin/com/example/oneup/: MainActivity.kt
api/: .cursorrules  .env  Cargo.toml  README.md  rustfmt.toml  swagger.yaml
api/assets/: db-model.mwb  db-model.mwb.bak
api/migrations/: 20250409213926_create_schema.down.sql  20250409213926_create_schema.up.sql
api/src/: main.rs
api/src/db/: action.rs  apikey.rs  category.rs  mod.rs  password.rs  point.rs  reward.rs  role.rs  user.rs
api/src/errors/: error.rs  http.rs  mod.rs
api/src/model/: action.rs  auth.rs  category.rs  config.rs  filter.rs  login.rs  mod.rs  password.rs  point.rs  points.rs  reward.rs  role.rs  roles.rs  simple.rs  user.rs
api/src/routes/: actions.rs  auth.rs  categories.rs  health.rs  login.rs  mod.rs  passwords.rs  points.rs  rewards.rs  roles.rs  users.rs
api/src/security/: auth.rs
api/src/state/: config.rs  mod.rs
api/src/utils/: config.rs  errors.rs  log_layout.rs  mod.rs  observe.rs  security.rs
docs/: model.mermaid
flutter/: .cursorrules  README.md  deploy.sh  pubspec.yaml
flutter/android/app/: build.gradle
flutter/android/app/src/main/: AndroidManifest.xml
flutter/lib/: const.dart  main.dart
flutter/lib/model/: action.dart  action.freezed.dart  action.g.dart  api_action.dart  api_action.freezed.dart  api_action.g.dart  apierr.dart  apierr.freezed.dart  apierr.g.dart  appstate.dart  auth.dart  auth.freezed.dart  auth.g.dart  category.dart  category.freezed.dart  category.g.dart  category_old.dart  health.dart  health.freezed.dart  health.g.dart  points.dart  points.freezed.dart  points.g.dart  points_old.dart  reward.dart  reward.freezed.dart  reward.g.dart  role.dart  role.freezed.dart  role.g.dart  simple.dart  simple.freezed.dart  simple.g.dart  state.dart  user.dart  user.freezed.dart  user.g.dart  user_old.dart
flutter/lib/providers/: api.dart  appstate.dart  mock_state.dart
flutter/lib/providers/api/: client.dart  provider.dart
flutter/lib/state/: state.dart
flutter/lib/state/model/: point.dart  user.dart
flutter/lib/ui/: layout.dart
flutter/lib/ui/pages/: rewards.dart  settings.dart  today.dart
flutter/lib/ui/views/: admin.dart  api.dart  api_action.dart  category.dart  input.dart  points.dart  range.dart  rewards.dart  server.dart  settings.dart  today.dart  user.dart  user_points.dart
flutter/lib/ui/views/settings/: action.dart  admin.dart  api.dart  api_action.dart  category.dart  profile.dart  role.dart  settings.dart  user.dart
flutter/lib/ui/widgets/: action.dart  action_dialog.dart  action_points.dart  action_widget.dart  animated_button.dart  app_bar.dart  appbar.dart  big_card.dart  category.dart  drawer.dart  input.dart  logo.dart  points.dart  points_dialog.dart  rail.dart  section.dart  user_tile.dart  week_date_picker.dart
flutter/lib/utils/: utils.dart
flutter/linux/: my_application.cc
flutter/test/: widget_test.dart
flutter/web/: manifest.json
lib/: main.dart
linux/: CMakeLists.txt  my_application.cc
server/: .env  Cargo.toml  README.md
server/assets/: db-model.mwb
server/migrations/: 20250622115855_add_approved_to_action.down.sql  20250622115855_add_approved_to_action.up.sql
server/src/: main.rs
server/src/db/: action.rs  apikey.rs  category.rs  point.rs  role.rs  user.rs
server/src/errors/: mod.rs
server/src/model/: action.rs  auth.rs  category.rs  config.rs  filter.rs  mod.rs  password.rs  reward.rs  user.rs
server/src/routes/: actions.rs  categories.rs  health.rs  mod.rs  passwords.rs  points.rs
server/src/state/: config.rs  mod.rs
server/web/: README.md  index.html
web/: index.html
