[package]
name = "oneup-api"
version = "0.1.0"
edition = "2021"

[dependencies]

# Environment variable handling
dotenvy = "0.15.7"
envy = "0.4.2"

# Logging and tracing solution
# - https://fast.github.io/blog/fastrace-a-modern-approach-to-distributed-tracing-in-rust/
log = { version = "0.4.27", features = ["serde"] }
fastrace = "0.7.9"
logforth = { version = "0.24.0", features = ["fastrace"] }
anyhow = "1.0.98"

# Web server support
axum = { version = "0.8.3", features = ["macros"] }
tokio = { version = "1.44.2", features = ["full"] }
# features = ["rt", "macros"];
tower-http = { version = "0.6.2", features = ["cors"] }

# Utilities
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
rand = "0.9.0"
chrono = { version = "0.4.40", features = ["serde"] }

#[dependencies.axum]
#version = "0.8.3"
# tokio, http1, http2, tower-log, tracing

[dependencies.sqlx]
version = "0.8.4"
default-features = false
features = [
  "chrono", "derive", "macros", "migrate", "runtime-tokio",
  "sqlite", "tls-rustls", "uuid"
]

[dev-dependencies]
http-body-util = "0.1.0"
tower = { version = "0.5.2", features = ["util"] }