[package]
name = "oneup-api"
version = "0.1.0"
edition = "2021"

[dependencies]

# Environment variable handling
dotenvy = "0.15.7"
envy = "0.4.2"

# Logging and tracing solution
anyhow = "1.0.98"
log = { version = "0.4.27", features = ["serde"] }
logforth = { version = "0.25.0", features = ["fastrace"] }
fastrace = "0.7.9"
fastrace-axum = "0.1"
fastrace-tracing = "0.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
#tower-layer = "0.3"
#tower-service = "0.3"
#tracing-log = "0.2.0"

# Utilities
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rand = "0.9.1"
chrono = { version = "0.4.41", features = ["serde"] }

# Web server support
axum = { version = "0.8.4", features = ["macros", "tracing"] }
tokio = { version = "1.45.0", features = ["full"] }
tower-http = { version = "0.6.4", features = ["cors", "trace"] }

#[dependencies.axum]
#version = "0.8.3"
# tokio, http1, http2, tower-log, tracing

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = ["chrono", "derive", "macros", "migrate", "runtime-tokio", "sqlite", "tls-rustls"]

[dev-dependencies]
http-body-util = "0.1.0"
tower = { version = "0.5.2", features = ["util"] }
